feat: :hammer: create the script of the pague

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List App</title>
     <link rel="stylesheet" href="css/stile.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -12,12 +13,12 @@
             <h2>Todo List <img src="storage/img/icon.png" alt=""></h2>
             <div class="row">
                 <input type="text" id="input_box" placeholder="Add you text">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
             <ul id="list_container">
-                <li class="checked">Task 1</li>
+                <!--<li class="checked">Task 1</li>
                 <li>Task 2</li>
-                <li>Task 3</li>
+                <li>Task 3</li>-->
             </ul>
         </div>
     </div>
